--- a/Análise_de_dados_futebol_feminino_internacional_1996/2022.ipynb
+++ b/Análise_de_dados_futebol_feminino_internacional_1996/2022.ipynb
@@ -319,12 +319,12 @@
         "results.head()\n"
       ],
       "metadata": {
-        "id": "vDQNhFtPvFlG",
-        "outputId": "b2db94d1-beb0-45c7-859a-9eddecc3d3fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "vDQNhFtPvFlG",
+        "outputId": "b2db94d1-beb0-45c7-859a-9eddecc3d3fd"
       },
       "execution_count": 6,
       "outputs": [
@@ -2306,6 +2306,20 @@
         "\n",
         "graficoMedia.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import plotly.io as pio\n",
+        "\n",
+        "pio.renderers.default = 'notebook'\n",
+        "pio.renderers.default = 'png'\n"
+      ],
+      "metadata": {
+        "id": "6pCpw8f7vytG"
+      },
+      "execution_count": 19,
+      "outputs": []
     }
   ],
   "metadata": {
